--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -346,6 +346,7 @@
     <string name="confirmation_disable_pictures_upload_message">Are you sure you want to disable this feature? The pending pictures will not be uploaded</string>
     <string name="confirmation_disable_videos_upload_message">Are you sure you want to disable this feature? The pending videos will not be uploaded</string>
     <string name="conflict_title">File conflict</string>
+    <string name="conflict_description">There is a conflict in file %1$s, tap to solve it</string>
     <string name="conflict_message">Which files do you want to keep? If you select both versions, the local file will have a number added to its name.</string>
     <string name="conflict_keep_both">Keep both</string>
     <string name="conflict_use_local_version">local version</string>
