--- a/res/values-de-rDE/strings.xml
+++ b/res/values-de-rDE/strings.xml
@@ -1,5 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <string name="about_android">%1$s Android App</string>
+  <string name="about_version">Version %1$s</string>
   <string name="actionbar_search">Ordner durchsuchen</string>
   <string name="actionbar_sync">Konto aktualisieren</string>
   <string name="actionbar_upload">Datei hochladen</string>
@@ -45,6 +47,8 @@
   <string name="prefs_log_summary_history">Dies zeigt die gespeicherten Protokolle</string>
   <string name="prefs_log_delete_history_button">Verlauf löschen</string>
   <string name="prefs_help">Hilfe</string>
+  <string name="prefs_sync_calendar_contacts">Synchronisiere deine Kontakte, deinen Kalender und deine Aufgaben</string>
+  <string name="prefs_sync_calendar_contacts_summary">Installiere DAVdroid</string>
   <string name="prefs_recommend">Dies einem Freund empfehlen</string>
   <string name="prefs_feedback">Rückmeldungen</string>
   <string name="prefs_imprint">Impressum</string>
@@ -94,6 +98,7 @@
   <string name="file_list_no_app_for_file_type">Keine Applikationen für diesen Dateityp gefunden</string>
   <string name="local_file_list_empty">Es befinden sich keine Dateien in diesem Ordner.</string>
   <string name="local_file_list_empty_just_folders">Es befinden sich keine Ordner in diesem Ordner.</string>
+  <string name="local_file_list_search_with_no_matches">Keine Suchergebnisse gefunden</string>
   <string name="upload_list_empty">Keine Uploads verfügbar</string>
   <string name="file_list_folder">Ordner</string>
   <string name="file_list_folders">Ordner</string>
@@ -127,7 +132,9 @@
   <string name="change_password">Passwort ändern</string>
   <string name="delete_account">Benutzerkonto löschen</string>
   <string name="create_account">Account erstellen</string>
+  <string name="upload_chooser_title">Dateien hochladen von...</string>
   <string name="uploader_info_dirname">Ordnername</string>
+  <string name="uploader_upload_in_progress_ticker">Hochladen...</string>
   <string name="uploader_upload_in_progress_content">%1$d%% Hochladen %2$s</string>
   <string name="uploader_upload_succeeded_ticker">Hochladen erfolgreich</string>
   <string name="uploader_upload_succeeded_content_single">%1$s wurde/n erfolgreich hochgeladen</string>
@@ -144,6 +151,8 @@
   <string name="uploads_view_group_current_uploads">Aktuell</string>
   <string name="uploads_view_group_failed_uploads">Fehlgeschlagen (Tippen zum Wiederholen)</string>
   <string name="uploads_view_group_finished_uploads">Hochgeladen</string>
+  <string name="uploads_view_group_file_count">%d Dateien</string>
+  <string name="uploads_view_group_file_count_single">%d Datei</string>
   <string name="uploads_view_upload_status_succeeded">Fertiggestellt</string>
   <string name="uploads_view_upload_status_cancelled">Abgebrochen</string>
   <string name="uploads_view_upload_status_paused">Pausiert</string>
@@ -161,6 +170,7 @@
   <string name="uploads_view_upload_status_waiting_for_wifi">Warte auf die drahtlose Verbindung</string>
   <string name="uploads_view_later_waiting_to_upload">Warten auf das Hochladen</string>
   <string name="uploads_view_unsupported_media_type">Nicht unterstützter Medientyp</string>
+  <string name="downloader_download_in_progress_ticker">Herunterladen...</string>
   <string name="downloader_download_in_progress_content">%1$d%% Herunterladen %2$s</string>
   <string name="downloader_download_succeeded_ticker">Herunterladen erfolgreich</string>
   <string name="downloader_download_succeeded_content">%1$s wurde erfolgreich heruntergeladen</string>
@@ -225,6 +235,7 @@
   <string name="media_forward_description">Vorspulen Button</string>
   <string name="upload_from_camera_title">Kamerabild</string>
   <string name="auth_getting_authorization">Legitimierung empfangen …</string>
+  <string name="auth_trying_to_login">Anmeldeversuch...</string>
   <string name="auth_no_net_conn_title">Keine Netzwerkverbindung</string>
   <string name="auth_nossl_plain_ok_title">Sichere Verbindung nicht verfügbar.</string>
   <string name="auth_connection_established">Verbindung hergestellt</string>
@@ -279,6 +290,7 @@
   <string name="wait_checking_credentials">Überprüfe gespeicherte Anmeldeinformationen</string>
   <string name="filedisplay_unexpected_bad_get_content">Ein unerwartetes Problem ist aufgetreten. Bitte versuchen Sie, die Datei in einer anderen App zu öffnen.</string>
   <string name="filedisplay_no_file_selected">Es wurde keine Datei ausgewählt.</string>
+  <string name="activity_chooser_title">Link senden an …</string>
   <string name="wait_for_tmp_copy_from_private_storage">Kopiere Datei vom privatem Speicher</string>
   <string name="oauth_check_onoff">Anmelden mit oAuth2</string>
   <string name="oauth_login_connection">Verbinde mit dem OAuth2-Server...</string>
@@ -408,6 +420,8 @@
   <string name="prefs_camera_upload_source_path_title">Kamera-Ordner (%1$s)</string>
   <string name="prefs_camera_upload_source_path_title_required">Benötigt</string>
   <string name="prefs_camera_upload_source_path_title_optional">Optional</string>
+  <string name="prefs_camera_upload_behaviour_dialogTitle">Originaldatei wird...</string>
+  <string name="prefs_camera_upload_behaviour_title">Originaldatei wird...</string>
   <string name="upload_copy_files">Datei kopieren</string>
   <string name="upload_move_files">Datei verschieben</string>
   <string name="pref_behaviour_entries_keep_file">im Originalordner behalten</string>
