--- a/res/values-pt-rBR/strings.xml
+++ b/res/values-pt-rBR/strings.xml
@@ -1,5 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <string name="about_android">%1$s para Android</string>
+  <string name="about_version">Versão %1$s</string>
   <string name="actionbar_search">Procurar no diretório atual</string>
   <string name="actionbar_sync">Atualizar conta</string>
   <string name="actionbar_upload">Enviar</string>
@@ -45,6 +47,8 @@
   <string name="prefs_log_summary_history">Isso mostra os registros gravados</string>
   <string name="prefs_log_delete_history_button">Apagar história</string>
   <string name="prefs_help">Ajuda</string>
+  <string name="prefs_sync_calendar_contacts">Sincronize seus contatos, calendários e tarefas</string>
+  <string name="prefs_sync_calendar_contacts_summary">Instalar o DAVdroid</string>
   <string name="prefs_recommend">Recomendar a um amigo</string>
   <string name="prefs_feedback">Feedback</string>
   <string name="prefs_imprint">Imprint</string>
@@ -128,7 +132,9 @@
   <string name="change_password">Alterar senha</string>
   <string name="delete_account">Remover conta</string>
   <string name="create_account">Criar conta</string>
+  <string name="upload_chooser_title">Enviando de</string>
   <string name="uploader_info_dirname">Nome da pasta</string>
+  <string name="uploader_upload_in_progress_ticker">Enviando...</string>
   <string name="uploader_upload_in_progress_content">%1$d%% Enviando %2$s</string>
   <string name="uploader_upload_succeeded_ticker">Envio bem sucedido</string>
   <string name="uploader_upload_succeeded_content_single">%1$s enviado</string>
@@ -145,6 +151,8 @@
   <string name="uploads_view_group_current_uploads">Atual</string>
   <string name="uploads_view_group_failed_uploads">Falha (toque para tentar novamente)</string>
   <string name="uploads_view_group_finished_uploads">Enviado</string>
+  <string name="uploads_view_group_file_count">%d arquivos</string>
+  <string name="uploads_view_group_file_count_single">%d arquivo</string>
   <string name="uploads_view_upload_status_succeeded">Concluído</string>
   <string name="uploads_view_upload_status_cancelled">Cancelado</string>
   <string name="uploads_view_upload_status_paused">Pausado</string>
@@ -162,6 +170,7 @@
   <string name="uploads_view_upload_status_waiting_for_wifi">Aguardando conexão wi-fi</string>
   <string name="uploads_view_later_waiting_to_upload">Aguardando para enviar</string>
   <string name="uploads_view_unsupported_media_type">Tipo de mídia não suportada</string>
+  <string name="downloader_download_in_progress_ticker">Baixando...</string>
   <string name="downloader_download_in_progress_content">%1$d%% Baixando %2$s</string>
   <string name="downloader_download_succeeded_ticker">Download bem sucedido</string>
   <string name="downloader_download_succeeded_content">%1$s baixado</string>
@@ -226,6 +235,7 @@
   <string name="media_forward_description">Botão de adiantamento rápido</string>
   <string name="upload_from_camera_title">Imagem da câmera</string>
   <string name="auth_getting_authorization">Obtendo autorização...</string>
+  <string name="auth_trying_to_login">Tentando fazer o login…</string>
   <string name="auth_no_net_conn_title">Sem conexão de rede</string>
   <string name="auth_nossl_plain_ok_title">Conexão segura indisponível.</string>
   <string name="auth_connection_established">Conexão estabelecida</string>
@@ -280,6 +290,7 @@
   <string name="wait_checking_credentials">Verificando credenciais salvas</string>
   <string name="filedisplay_unexpected_bad_get_content">Problema inesperado; por favor, tente selecionar o arquivo com outro app</string>
   <string name="filedisplay_no_file_selected">Nenhum arquivo foi selecionado</string>
+  <string name="activity_chooser_title">Enviando linque para</string>
   <string name="wait_for_tmp_copy_from_private_storage">Copiando o arquivo de armazenagem privada</string>
   <string name="oauth_check_onoff">Login com oAuth2</string>
   <string name="oauth_login_connection">Conectando ao servidor OAuth2…</string>
@@ -410,6 +421,8 @@
   <string name="prefs_camera_upload_source_path_title">Pasta da câmera (%1$s)</string>
   <string name="prefs_camera_upload_source_path_title_required">exigido</string>
   <string name="prefs_camera_upload_source_path_title_optional">opcional</string>
+  <string name="prefs_camera_upload_behaviour_dialogTitle">Arquivo original será</string>
+  <string name="prefs_camera_upload_behaviour_title">Arquivo original será</string>
   <string name="upload_copy_files">Copiar o arquivo</string>
   <string name="upload_move_files">Mover o arquivo</string>
   <string name="pref_behaviour_entries_keep_file">mantido na pasta original</string>
