--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -1,5 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <string name="about_android">%1$s для Андроида</string>
+  <string name="about_version">Версия %1$s</string>
   <string name="actionbar_search">Поиск в этой папке</string>
   <string name="actionbar_sync">Обновить учетную запись</string>
   <string name="actionbar_upload">Загрузить</string>
@@ -45,6 +47,8 @@
   <string name="prefs_log_summary_history">Здесь показаны записи в журнал</string>
   <string name="prefs_log_delete_history_button">Удалить историю</string>
   <string name="prefs_help">Помощь</string>
+  <string name="prefs_sync_calendar_contacts">Синхронизировать ваши контакты, календари и задачи</string>
+  <string name="prefs_sync_calendar_contacts_summary">Установить DAVdroid</string>
   <string name="prefs_recommend">Рекомендовать другу</string>
   <string name="prefs_feedback">Обратная связь</string>
   <string name="prefs_imprint">Штамп</string>
@@ -129,7 +133,9 @@
   <string name="change_password">Сменить пароль</string>
   <string name="delete_account">Удалить аккаунт</string>
   <string name="create_account">Создать учётную запись</string>
+  <string name="upload_chooser_title">Закачать из</string>
   <string name="uploader_info_dirname">Имя каталога</string>
+  <string name="uploader_upload_in_progress_ticker">Закачка…</string>
   <string name="uploader_upload_in_progress_content">%1$d%% Загружается %2$s</string>
   <string name="uploader_upload_succeeded_ticker">Загрузка завершена</string>
   <string name="uploader_upload_succeeded_content_single">%1$s загружено</string>
@@ -146,6 +152,8 @@
   <string name="uploads_view_group_current_uploads">Текущие</string>
   <string name="uploads_view_group_failed_uploads">Не удалось (тапните для повторения)</string>
   <string name="uploads_view_group_finished_uploads">Загружено</string>
+  <string name="uploads_view_group_file_count">%d файлов</string>
+  <string name="uploads_view_group_file_count_single">%d файл</string>
   <string name="uploads_view_upload_status_succeeded">Завершённые</string>
   <string name="uploads_view_upload_status_cancelled">Отменён</string>
   <string name="uploads_view_upload_status_paused">На паузе</string>
@@ -163,6 +171,7 @@
   <string name="uploads_view_upload_status_waiting_for_wifi">Ожидание соединения по wifi</string>
   <string name="uploads_view_later_waiting_to_upload">Ожидается загрузка</string>
   <string name="uploads_view_unsupported_media_type">Неподдерживаемый тип медиаданных</string>
+  <string name="downloader_download_in_progress_ticker">Скачивание…</string>
   <string name="downloader_download_in_progress_content">%1$d%% Скачивается %2$s</string>
   <string name="downloader_download_succeeded_ticker">Скачивание завершено</string>
   <string name="downloader_download_succeeded_content">%1$s скачено</string>
@@ -227,6 +236,7 @@
   <string name="media_forward_description">Перемотка вперед</string>
   <string name="upload_from_camera_title">Изображение из камеры</string>
   <string name="auth_getting_authorization">Выполняется авторизация...</string>
+  <string name="auth_trying_to_login">Пробую войти…</string>
   <string name="auth_no_net_conn_title">Нет подключения к сети</string>
   <string name="auth_nossl_plain_ok_title">Защищённое соединение недоступно.</string>
   <string name="auth_connection_established">Соединение установлено</string>
@@ -281,6 +291,7 @@
   <string name="wait_checking_credentials">Проверка сохранённых учётных данных</string>
   <string name="filedisplay_unexpected_bad_get_content">Неизвестная ошибка; выберите этот файл из другого приложения</string>
   <string name="filedisplay_no_file_selected">Файлы не выбраны</string>
+  <string name="activity_chooser_title">Отправка ссылки пользователю</string>
   <string name="wait_for_tmp_copy_from_private_storage">Копирование файла из частной хранилища</string>
   <string name="oauth_check_onoff">Войти через oAuth2</string>
   <string name="oauth_login_connection">Подключение к oAuth2 серверу...</string>
@@ -411,6 +422,8 @@
   <string name="prefs_camera_upload_source_path_title">Каталог камеры (%1$s)</string>
   <string name="prefs_camera_upload_source_path_title_required">обязательно</string>
   <string name="prefs_camera_upload_source_path_title_optional">не обязательно</string>
+  <string name="prefs_camera_upload_behaviour_dialogTitle">Исходный файл будет</string>
+  <string name="prefs_camera_upload_behaviour_title">Исходный файл будет</string>
   <string name="upload_copy_files">Копировать файл</string>
   <string name="upload_move_files">Переместить файл</string>
   <string name="pref_behaviour_entries_keep_file">остался в исходной папке</string>
