--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -1,5 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <string name="about_android">%1$s 为 Android</string>
+  <string name="about_version">版本 %1$s</string>
   <string name="actionbar_search">在此文件夹搜索</string>
   <string name="actionbar_sync">刷新帐户</string>
   <string name="actionbar_upload">上传</string>
@@ -45,6 +47,8 @@
   <string name="prefs_log_summary_history">这显示已经保存的日志</string>
   <string name="prefs_log_delete_history_button">删除历史</string>
   <string name="prefs_help">帮助</string>
+  <string name="prefs_sync_calendar_contacts">同步联系人、日历和任务</string>
+  <string name="prefs_sync_calendar_contacts_summary">安装 DAVdroid</string>
   <string name="prefs_recommend">推荐给朋友</string>
   <string name="prefs_feedback">反馈</string>
   <string name="prefs_imprint">版本说明</string>
@@ -128,7 +132,9 @@
   <string name="change_password">修改密码</string>
   <string name="delete_account">删除账号</string>
   <string name="create_account">创建账号</string>
+  <string name="upload_chooser_title">上传自</string>
   <string name="uploader_info_dirname">文件夹名称</string>
+  <string name="uploader_upload_in_progress_ticker">上传中……</string>
   <string name="uploader_upload_in_progress_content">%1$d%% 上传 %2$s</string>
   <string name="uploader_upload_succeeded_ticker">上传成功</string>
   <string name="uploader_upload_succeeded_content_single">%1$s 上传成功</string>
@@ -145,6 +151,8 @@
   <string name="uploads_view_group_current_uploads">当前</string>
   <string name="uploads_view_group_failed_uploads">失败。(轻按以重试)</string>
   <string name="uploads_view_group_finished_uploads">已上传</string>
+  <string name="uploads_view_group_file_count">%d 个文件</string>
+  <string name="uploads_view_group_file_count_single">%d 个文件</string>
   <string name="uploads_view_upload_status_succeeded">完成</string>
   <string name="uploads_view_upload_status_cancelled">已取消</string>
   <string name="uploads_view_upload_status_paused">已暂停</string>
@@ -162,6 +170,7 @@
   <string name="uploads_view_upload_status_waiting_for_wifi">等待WiFi连接</string>
   <string name="uploads_view_later_waiting_to_upload">等待上传...</string>
   <string name="uploads_view_unsupported_media_type">不支持的媒体类型</string>
+  <string name="downloader_download_in_progress_ticker">下载中……</string>
   <string name="downloader_download_in_progress_content">%1$d%% 下载中 %2$s</string>
   <string name="downloader_download_succeeded_ticker">下载成功</string>
   <string name="downloader_download_succeeded_content">%1$s 下载成功</string>
@@ -226,6 +235,7 @@
   <string name="media_forward_description">快进按钮</string>
   <string name="upload_from_camera_title">从相机获取照片</string>
   <string name="auth_getting_authorization">正在认证...</string>
+  <string name="auth_trying_to_login">尝试登录中.……</string>
   <string name="auth_no_net_conn_title">没有网络连接</string>
   <string name="auth_nossl_plain_ok_title">安全连接不可用。</string>
   <string name="auth_connection_established">连接已建立。</string>
@@ -280,6 +290,7 @@
   <string name="wait_checking_credentials">正在检查已保存的凭据</string>
   <string name="filedisplay_unexpected_bad_get_content">未知问题；请试试用其他程序选择此文件</string>
   <string name="filedisplay_no_file_selected">未选择文件</string>
+  <string name="activity_chooser_title">发送链接给</string>
   <string name="wait_for_tmp_copy_from_private_storage">从私有存储中拷贝文件</string>
   <string name="oauth_check_onoff">使用oAuth2登陆</string>
   <string name="oauth_login_connection">正在连接到 OAuth2 服务…</string>
@@ -409,6 +420,8 @@
   <string name="prefs_camera_upload_source_path_title">相机文件夹 (%1$s)</string>
   <string name="prefs_camera_upload_source_path_title_required">必需</string>
   <string name="prefs_camera_upload_source_path_title_optional">可选</string>
+  <string name="prefs_camera_upload_behaviour_dialogTitle">原始文件将会</string>
+  <string name="prefs_camera_upload_behaviour_title">原始文件将会</string>
   <string name="upload_copy_files">复制文件</string>
   <string name="upload_move_files">移动文件</string>
   <string name="pref_behaviour_entries_keep_file">保留在原始文件夹</string>
