--- a/res/values-es-rMX/strings.xml
+++ b/res/values-es-rMX/strings.xml
@@ -460,4 +460,5 @@
   </plurals>
   <!--Welcome to oC intro features-->
   <string name="welcome_feature_4_title">Cargas de la cámara</string>
+  <string name="welcome_feature_7_title">Seleccionar todo</string>
 </resources>
