--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -488,4 +488,6 @@ Ci-dessous la liste des fichiers locaux, et les fichiers distants dans %5$s auxq
   <string name="welcome_feature_3_text">Connectez-vous à tous vos serveurs ownCloud</string>
   <string name="welcome_feature_4_title">Téléversements de la caméra</string>
   <string name="welcome_feature_4_text">Vos images/vidéos ont été téléversées automatiquement</string>
+  <string name="welcome_feature_7_title">Tout sélectionner</string>
+  <string name="welcome_feature_8_title">Disponible hors-ligne</string>
 </resources>
