--- a/res/values-is/strings.xml
+++ b/res/values-is/strings.xml
@@ -457,4 +457,6 @@
   </plurals>
   <!--Welcome to oC intro features-->
   <string name="welcome_feature_4_title">Innsendingar úr myndavél</string>
+  <string name="welcome_feature_7_title">Velja allt</string>
+  <string name="welcome_feature_8_title">Tiltækt án nettengingar</string>
 </resources>
