--- a/res/values-pt-rPT/strings.xml
+++ b/res/values-pt-rPT/strings.xml
@@ -458,4 +458,6 @@
     <item quantity="other">%d selecionados</item>
   </plurals>
   <!--Welcome to oC intro features-->
+  <string name="welcome_feature_7_title">Selecionar todos</string>
+  <string name="welcome_feature_8_title">Disponível off-line</string>
 </resources>
