--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -441,4 +441,5 @@ Te rog ia legătura cu administratorul</string>
   <string name="file_sync_notification_channel_name">Sincronizare fișiere</string>
   <string name="file_sync_notification_channel_description">Vizualizează rezultatul sincronizării</string>
   <!--Welcome to oC intro features-->
+  <string name="welcome_feature_7_title">Selectează tot</string>
 </resources>
