--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -443,4 +443,6 @@
     <item quantity="other">%d valda</item>
   </plurals>
   <!--Welcome to oC intro features-->
+  <string name="welcome_feature_7_title">Välj allt</string>
+  <string name="welcome_feature_8_title">Tillgänglig offline</string>
 </resources>
