--- a/res/values-bg-rBG/strings.xml
+++ b/res/values-bg-rBG/strings.xml
@@ -404,4 +404,5 @@
     <item quantity="other">%d избран</item>
   </plurals>
   <!--Welcome to oC intro features-->
+  <string name="welcome_feature_7_title">Избери всички</string>
 </resources>
