--- a/res/values-en-rGB/strings.xml
+++ b/res/values-en-rGB/strings.xml
@@ -455,4 +455,6 @@
     <item quantity="other">%d selected</item>
   </plurals>
   <!--Welcome to oC intro features-->
+  <string name="welcome_feature_7_title">Select all</string>
+  <string name="welcome_feature_8_title">Available offline</string>
 </resources>
