--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -408,4 +408,5 @@
     <item quantity="other">‫%d گزیده</item>
   </plurals>
   <!--Welcome to oC intro features-->
+  <string name="welcome_feature_7_title">انتخاب همه</string>
 </resources>
