--- a/res/values-id/strings.xml
+++ b/res/values-id/strings.xml
@@ -429,4 +429,5 @@
     <item quantity="other">%d terpilih</item>
   </plurals>
   <!--Welcome to oC intro features-->
+  <string name="welcome_feature_7_title">Pilih Semua</string>
 </resources>
