--- a/res/values-ja-rJP/strings.xml
+++ b/res/values-ja-rJP/strings.xml
@@ -473,4 +473,6 @@
   </plurals>
   <!--Welcome to oC intro features-->
   <string name="welcome_feature_4_title">カメラアップロード</string>
+  <string name="welcome_feature_7_title">すべて選択</string>
+  <string name="welcome_feature_8_title">オフラインが利用可能です</string>
 </resources>
