--- a/res/values-lt-rLT/strings.xml
+++ b/res/values-lt-rLT/strings.xml
@@ -500,4 +500,6 @@
   <string name="button_rate_now_name">ĮVERTINTI</string>
   <!--Welcome to oC intro features-->
   <string name="welcome_feature_4_title">Nuotraukų įkėlimai</string>
+  <string name="welcome_feature_7_title">Pažymėti viską</string>
+  <string name="welcome_feature_8_title">Pasiekiamas neprisijungus</string>
 </resources>
