--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -507,6 +507,6 @@
   <string name="welcome_feature_4_title">Wrzucanie kamery</string>
   <string name="welcome_feature_4_text">Automatyczne wysyłanie twoich zdjęć oraz wideo </string>
   <string name="welcome_feature_5_text">Odtwarzaj twoje pliki wideo bez pobierania</string>
-  <string name="welcome_feature_7_title">Nowe ikony</string>
-  <string name="welcome_feature_8_title">Nowy piny</string>
+  <string name="welcome_feature_7_title">Wybierz wszystko</string>
+  <string name="welcome_feature_8_title">Dostępne w trybie offline</string>
 </resources>
