--- a/res/values-pt-rBR/strings.xml
+++ b/res/values-pt-rBR/strings.xml
@@ -334,6 +334,7 @@
   <string name="confirmation_disable_pictures_upload_message">Tem certeza de que deseja desativar esse recurso? As imagens pendentes não serão carregadas</string>
   <string name="confirmation_disable_videos_upload_message">Tem certeza de que deseja desativar esse recurso? Os vídeos pendentes não serão carregadas</string>
   <string name="conflict_title">Conflito de arquivo</string>
+  <string name="conflict_description">Há um conflito no arquivo %1$s, toque para resolvê-lo</string>
   <string name="conflict_message">Quais arquivos você deseja manter? Se você selecionar ambas as versões, o arquivo local terá um número adicionado ao seu nome.</string>
   <string name="conflict_keep_both">Manter ambos</string>
   <string name="conflict_use_local_version">versão local</string>
@@ -528,11 +529,7 @@
   <string name="welcome_feature_4_text">Suas fotos/vídeos carregados automaticamente</string>
   <string name="welcome_feature_5_title">Transmissão de vídeo</string>
   <string name="welcome_feature_5_text">Assista seus vídeos sem baixá-los</string>
-  <string name="welcome_feature_6_title">Cota do usuário</string>
-  <string name="welcome_feature_6_text">Saiba sobre seu espaço usado e disponível</string>
-  <string name="welcome_feature_7_title">Novos icones</string>
-  <string name="welcome_feature_7_text">Para baixar e definir arquivos como av. desligado</string>
-  <string name="welcome_feature_8_title">Novos pinos</string>
-  <string name="welcome_feature_8_text">Para sincronização, baixado e av. arquivos offline</string>
+  <string name="welcome_feature_7_title">Selecionar tudo</string>
+  <string name="welcome_feature_8_title">Disponível offline</string>
   <string name="no_borwser_installed_alert">Nenhum navegador instalado. Por favor, instale um navegador para permitir um login seguro.</string>
 </resources>
